LOG Updated to 0.18 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  CatalystX-SimpleLogin-0.14.tar.gz: b4f0d092f077437f40d3a1d8207245f815e18095
 sources:
-  "CatalystX-SimpleLogin-0.14.tar.gz": b4f0d092f077437f40d3a1d8207245f815e18095
+  CatalystX-SimpleLogin-0.18.tar.gz: ddcf813a0afdee91479e7b3b649cf106906ac5db
